<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.totrade.spt.mobile.view.customize.CommonTitle3
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_hight"
        android:tag="时间选择" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88C6E7"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/sunday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/monday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/tuesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/wednesday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/thursday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/friday" />

        <TextView
            style="@style/calendar_week_item_style"
            android:text="@string/saturday" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvCalendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:cacheColorHint="@android:color/transparent"
        android:dividerHeight="1px"
        android:listSelector="@null"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >
    </ListView>

</LinearLayout>