<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/SplashView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/blue" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="1"
                android:layout_marginLeft="3dp"
                android:layout_gravity="center"
                android:text="@string/leading_words"
                android:textColor="@color/white"
                android:textSize="@dimen/str_textsize_24sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="17dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/splash_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="7dp"
                android:text="@string/copyright"
                android:textColor="@color/gray"
                android:textSize="@dimen/str_textsize_11sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/SplashView2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tv_trynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llPoint"
            android:layout_centerHorizontal="true"
            android:background="@drawable/tv_bg_splash"
            android:paddingBottom="11dp"
            android:paddingLeft="21dp"
            android:paddingRight="21dp"
            android:paddingTop="11dp"
            android:text="@string/trynow"
            android:textColor="@color/blue"
            android:textSize="@dimen/str_textsize_16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/llPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp"
            android:layout_marginTop="37dp"
            android:orientation="horizontal" />
    </RelativeLayout>

</RelativeLayout>