<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="40dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/space_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/activity_driver"
            android:orientation="vertical"
            android:showDividers="middle|end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/login_phone_input" />

                <View
                    android:layout_width="1px"
                    android:layout_height="25dp"
                    android:background="@color/ui_line_divider" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:hint="请输入手机号"
                    android:maxLines="1"
                    android:textColorHint="@color/ui_line_divider"
                    android:textSize="@dimen/textsize_28px" />

                <ImageView
                    android:id="@+id/iv_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/del_input" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/login_pwd_input" />

                <View
                    android:layout_width="1px"
                    android:layout_height="25dp"
                    android:background="@color/ui_line_divider" />

                <EditText
                    android:id="@+id/et_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_horizontal"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColorHint="@color/ui_line_divider"
                    android:textSize="@dimen/textsize_28px" />

                <ImageView
                    android:id="@+id/iv_pwd_visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_iv_pwd_visible" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:text="@string/forget_pwd"
            android:textColor="@color/blue"
            android:textSize="@dimen/str_textsize_11sp" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height2"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_bg_blue2"
            android:gravity="center"
            android:text="@string/str_userlogin"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_28px" />

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/fast_registration"
            android:textColor="@color/blue"
            android:textSize="@dimen/textsize_28px" />
    </LinearLayout>
</android.support.v7.widget.CardView>
